--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "nprogress": "^0.2.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-paginate": "^8.1.3",
     "react-redux": "^8.0.2",
